# downpore-core

./: CLAUDE.md  LICENSE  pyproject.toml
downpore_core/: aria2_client.py  test_data.py  test_seeder.py
tests/: test_aria2_client.py
