[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "downpore-core"
version = "0.1.0"
description = "BitTorrent client and download management for downpore"
dependencies = ["aria2p", "torf"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "torrentp"]

[tool.setuptools.packages.find]
where = ["."]
include = ["downpore_core*"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"